ELTETANREP-74 add special groups to OidcAuthenticationBean